--- a/theme.css
+++ b/theme.css
@@ -44,6 +44,7 @@ body {
   --line-height-0-5: 1.2em;
   --line-height-1: 1.53em;
   --font-text-size: var(--editor-font-size);
+  --font-ui-smaller: var(--font-scale-0-5);
   --oz-fta-folder-font-size: 15px;
   /*──────────Tracking (Letter Spacing)──────────*/
   --tracking-0: 0px;
@@ -6137,6 +6138,14 @@ body.plugin-sliding-panes-rotate-header .workspace>.mod-root>.workspace-leaf>.wo
 ──────────────────────────────────────*/
 
 /*────────────────────────────────────
+   Focus Mode Plugin Styling
+────────────────────────────────────*/
+.focus-mode .cm-s-obsidian .cm-line:not(.cm-active),
+.focus-mode .cm-s-obsidian div:not(.CodeMirror-activeline) > .CodeMirror-line {
+    opacity: 0.75 !important;
+    filter: saturate(0.75) !important;
+}
+/*────────────────────────────────────
                 Dataview
 ────────────────────────────────────*/
 /* Dataview Tables */
@@ -6439,63 +6448,6 @@ table.dataview {
 
 .hover-editor.popover .workspace-leaf {
   padding-right: 0;
-}
-
-/*────────────────────────────────────
-        Full Calendar Plugin
-────────────────────────────────────*/
-.fc {
-  --fc-button-active-bg-color: var(--interactive-accent) !important;
-  --fc-event-bg-color: var(--text-highlight-bg) !important;
-  --fc-now-indicator-color: var(--interactive-accent) !important;
-  --fc-highlight-color: var(--background-primary-alt) !important;
-  --fc-today-bg-color: var(--background-primary-alt) !important;
-}
-
-.fc-button-active {
-  background-color: var(--fc-button-active-bg-color) !important;
-}
-
-.fc th {
-  background: var(--background-primary-alt);
-}
-
-.fc .fc-button-primary:not(:disabled):active,
-.fc .fc-button-primary:not(:disabled).fc-button-active {
-  border-color: transparent;
-  border-color: transparent;
-}
-
-.fc .fc-button-primary:not(:disabled):active:focus,
-.fc .fc-button-primary:not(:disabled).fc-button-active:focus {
-  box-shadow: initial !important;
-}
-
-.fc .fc-highlight {
-  background: transparent !important;
-  background: transparent !important;
-}
-
-.fc .fc-daygrid-body-natural .fc-daygrid-day-events {
-  margin-bottom: 0em !important;
-}
-
-.fc-v-event .fc-event-title {
-  display: inline-block !important;
-}
-
-.fc .fc-timegrid-divider {
-  background: var(--fc-border-color) !important;
-}
-
-.fc .fc-timegrid-now-indicator-line {
-  border-color: black !important;
-  border-color: var(--fc-now-indicator-color, black) !important;
-  border-width: 2px 0 0 !important;
-}
-
-.fc-theme-standard .fc-list-day-cushion {
-  background-color: var(--background-primary-alt) !important;
 }
 
 /*────────────────────────────────────
