--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,18 @@
 @use "theme.scss";
+// @use "button.scss";
+// @use "modal.scss";
+@use "dropdown.scss";
+@use "empty-page.scss";
+// @use "input.scss";
+@use "launch.scss";
+@use "modal.scss";
+@use "notification.scss";
+@use "popovers.scss";
+@use "scrollbars.scss";
+@use "slider.scss";
+@use "slides.scss";
+@use "tooltip.scss";
+
 @use "content.scss";
 @use "workspace.scss";
 @use "graph.scss";
