fix: update the mk-title text and remove border from embed-title

--- a/theme.css
+++ b/theme.css
@@ -3161,7 +3161,6 @@ mjx-math {
   line-height: var(--line-height-1);
   text-align: left;
   padding: var(--scale-2-3) var(--scale-8-5) var(--scale-2-3) var(--scale-2-6);
-  border-bottom: 1px solid var(--background-modifier-border);
 }
 
 .popover .markdown-embed-link,
@@ -5485,6 +5484,13 @@ table.dataview {
 .internal-link.data-link-icon {
   color: inherit;
   transition: var(--duration-superfast) var(--motion-smooth);
+}
+
+/*────────────────────────────────────
+       MAKE.md
+────────────────────────────────────*/
+.mk-flow-titlebar {
+  display: none;
 }
 
 /*# sourceMappingURL=theme.css.map */
