--- a/src/plugins.scss
+++ b/src/plugins.scss
@@ -1,4 +1,3 @@
-
 /*────────────────────────────────────
 ++++++++++++++++++++++++++++++++++++++
             Community Plugins
@@ -9,9 +8,9 @@
    Focus Mode Plugin Styling
 ────────────────────────────────────*/
 .focus-mode .cm-s-obsidian .cm-line:not(.cm-active),
-.focus-mode .cm-s-obsidian div:not(.CodeMirror-activeline) > .CodeMirror-line {
-    opacity: 0.70 !important;
-    filter: saturate(0.70) !important;
+.focus-mode .cm-s-obsidian div:not(.CodeMirror-activeline)>.CodeMirror-line {
+  opacity: 0.70 !important;
+  filter: saturate(0.70) !important;
 }
 
 /*────────────────────────────────────
@@ -151,4 +150,12 @@ table.dataview {
 .internal-link.data-link-icon {
   color: inherit;
   transition: var(--duration-superfast) var(--motion-smooth);
+}
+
+/*────────────────────────────────────
+       MAKE.md
+────────────────────────────────────*/
+
+.mk-flow-titlebar {
+  display: none
 }
