--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,6 @@
 @use "tooltip.scss";
 
 @use "content.scss";
-@use "workspace.scss";
+// @use "workspace.scss";
 @use "graph.scss";
 @use "plugins.scss";
